tests/NormalTests/paczka2/big_fuzzy/44488495.err
Error in line 19: 4oqeX76crL S348 69,5
Error in line 25: lcx3azqCRP A832 77,4
Error in line 38: 4oqeX76crL A832 58,04
Error in line 26: 4oqeX76crL A832 28,9
Error in line 39: 4oqeX76crL A859 45,5
Error in line 46: OSLfdol A832 4,0
Error in line 49: vzZqfrE A859 86,1
Error in line 64: vzZqfrE A832 54,5
Error in line 76: lcx3azqCRP S348 79,4
Error in line 87: vnDY5iP1alQ A832 37,8
Error in line 109: vzZqfrE S13 34,7
Error in line 134: lcx3azqCRP S13 2,1
Error in line 135: lcx3azqCRP A832 89,0
Error in line 136: vnDY5iP1alQ S13 84,1
Error in line 151: vnDY5iP1alQ S13 51,9
Error in line 147: A832 S13 7,3
Error in line 165: A832 A859 11,8
Error in line 177: 4oqeX76crL A859 15,14
Error in line 174: A832 S13 97,8
Error in line 178: A832 A832 6,8
Error in line 190: vzZqfrE 859 60,8
Error in line 180: 4oqeX76crL A859 61,9
Error in line 188: A832 S348 54,2
Error in line 193: vzZqfrE A859 97,9
Error in line 192: A832 S13 23,5
Error in line 205: 4oqeX76crL A859 66,8
Error in line 214: 4oqeX76crL S13 84,9
Error in line 229: vnDY5iP1alQ A832 7,4
Error in line 224: vzZqfrE S348 54,8
Error in line 221: A832 S13 25,4
